--- a/Music Maker/index.html
+++ b/Music Maker/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Music Maker</title>
+    <title>Music Maker | Tyrell Brantley</title>
   </head>
   <body>
     <section class="app">
